# sem2laba6

./: BaseEnemy.cpp  BaseEnemy.h  CMakeLists.txt  main.cpp
task1/: exceptions.cpp  exceptions.h  utils.cpp  utils.h
task2/: BaseCharacter.cpp  BaseCharacter.h  MainHero.cpp  MainHero.h  Weapon.cpp  Weapon.h  exceptions.cpp  exceptions.h
